# totality

./: CMakeLists.txt  CMakePresets.json  README.md  build.bat
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
